# cs445-final-project-retrieval

./: .gitignore  FINAL_REPORT_DRAFT.md  README.md  pyproject.toml  requirements.txt
notebooks/: officeqa_retrieval_colab.ipynb
scripts/: build_multimodal_index.py  build_ocr_manifest.py  build_page_index.py  download_officeqa_pdfs.py  make_report_tables.py  prepare_data.py  run_retrieval_eval.py
src/officeqa_retrieval/: __init__.py  bm25.py  cli.py  colqwen.py  dataset.py  faiss_index.py  manifest.py  metrics.py  ocr_manifest.py  pipeline.py  render.py  report_visualizations.py  rerank.py  schemas.py  utils.py  vision.py
tests/: test_bm25_metrics.py  test_dataset.py  test_faiss_index.py  test_manifest_render.py  test_ocr_manifest.py
